[gd_scene load_steps=23 format=1]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://gfx/field_background.png" type="Texture" id=2]
[ext_resource path="res://field.gd" type="Script" id=3]
[ext_resource path="res://gfx/count_box.png" type="Texture" id=4]
[ext_resource path="res://fonts/font.fnt" type="BitmapFont" id=5]
[ext_resource path="res://fonts/font-2.fnt" type="BitmapFont" id=6]
[ext_resource path="res://gfx/top_score.png" type="Texture" id=7]
[ext_resource path="res://gfx/top_score_pressed.png" type="Texture" id=8]
[ext_resource path="res://gfx/undo.png" type="Texture" id=9]
[ext_resource path="res://gfx/undo_pressed.png" type="Texture" id=10]
[ext_resource path="res://gfx/new_game.png" type="Texture" id=11]
[ext_resource path="res://gfx/new_game_pressed.png" type="Texture" id=12]
[ext_resource path="res://gfx/quit_game.png" type="Texture" id=13]
[ext_resource path="res://gfx/quit_game_pressed.png" type="Texture" id=14]
[ext_resource path="res://gfx/win_button.png" type="Texture" id=15]
[ext_resource path="res://gfx/win_button_pressed.png" type="Texture" id=16]
[ext_resource path="res://gfx/lose_button.png" type="Texture" id=17]
[ext_resource path="res://gfx/lose_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://gfx/top_scores_panel.png" type="Texture" id=19]
[ext_resource path="res://sfx/deny_blocks.wav" type="Sample" id=20]
[ext_resource path="res://sfx/destroy_blocks.wav" type="Sample" id=21]

[sub_resource type="SampleLibrary" id=1]

samples/deny_blocks = { "db":0.0, "pitch":1.0, "sample":ExtResource( 20 ) }
samples/destroy_blocks = { "db":0.0, "pitch":1.0, "sample":ExtResource( 21 ) }

[node name="scene_root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="field_back" type="Sprite" parent="."]

transform/pos = Vector2( 104, 23 )
texture = ExtResource( 2 )
centered = false

[node name="field_box" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 29.0
margin/right = 638.0
margin/bottom = 557.0
script/script = ExtResource( 3 )

[node name="box" type="Sprite" parent="."]

transform/pos = Vector2( 676, 23 )
texture = ExtResource( 4 )
centered = false

[node name="box_0" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 50.0
margin/right = 47.0
margin/bottom = 91.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box_1" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 53.0
margin/top = 50.0
margin/right = 91.0
margin/bottom = 91.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box_2" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 97.0
margin/top = 50.0
margin/right = 135.0
margin/bottom = 91.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box_3" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 141.0
margin/top = 50.0
margin/right = 179.0
margin/bottom = 91.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box_4" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 50.0
margin/right = 223.0
margin/bottom = 91.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 120.0
margin/right = 222.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="possible" type="Label" parent="box"]

rect/rotation = 0.0443721
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 186.0
margin/right = 222.0
margin/bottom = 222.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "99999"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="records_button" type="TextureButton" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 337.0
margin/right = 225.0
margin/bottom = 403.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )

[node name="undo_button" type="TextureButton" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 248.0
margin/right = 225.0
margin/bottom = 314.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )

[node name="new_game" type="TextureButton" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 425.0
margin/right = 115.0
margin/bottom = 533.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )

[node name="quit_game" type="TextureButton" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 139.0
margin/top = 425.0
margin/right = 225.0
margin/bottom = 533.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )

[node name="overlay" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1042.0
margin/bottom = 586.0

[node name="message_win" type="TextureButton" parent="overlay"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 296.0
margin/top = 237.0
margin/right = 746.0
margin/bottom = 349.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )

[node name="message_lose" type="TextureButton" parent="overlay"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 296.0
margin/top = 237.0
margin/right = 746.0
margin/bottom = 349.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
textures/pressed = ExtResource( 18 )

[node name="top_scores_panel" type="TextureButton" parent="overlay"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 296.0
margin/top = 169.0
margin/right = 746.0
margin/bottom = 417.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )

[node name="top_1" type="Label" parent="overlay/top_scores_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 76.0
margin/right = 435.0
margin/bottom = 111.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "1970.01.01 ................... 000000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="top_2" type="Label" parent="overlay/top_scores_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 117.0
margin/right = 435.0
margin/bottom = 152.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "1970.01.01 ................... 000000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="top_3" type="Label" parent="overlay/top_scores_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 160.0
margin/right = 435.0
margin/bottom = 195.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "1970.01.01 ................... 000000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="info" type="Label" parent="overlay/top_scores_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 213.0
margin/right = 435.0
margin/bottom = 230.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.235294, 0.235294, 0.235294, 1 )
text = "tap to close"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="box/records_button" to="." method="_show_top_score"]

[connection signal="pressed" from="box/undo_button" to="." method="_undo"]

[connection signal="pressed" from="box/new_game" to="." method="_new_game"]

[connection signal="pressed" from="box/quit_game" to="." method="_quit_game"]

[connection signal="pressed" from="overlay/message_win" to="." method="_hide_message_win"]

[connection signal="pressed" from="overlay/message_lose" to="." method="_hide_message_lose"]

[connection signal="pressed" from="overlay/top_scores_panel" to="." method="_hide_top_score"]


